--- a/CreatoXdoc/pom.xml
+++ b/CreatoXdoc/pom.xml
@@ -3,6 +3,10 @@
   <groupId>CreatoXdoc</groupId>
   <artifactId>CreatoXdoc</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+ <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
   	  <dependencies>
 		  
 		  <dependency>
@@ -48,10 +52,21 @@
     <artifactId>cucumber-junit</artifactId>
     <version>7.17.0</version>
     <scope>test</scope>
-</dependency>
-
-
-            
+</dependency> 
 	  </dependencies>
+	<build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version> <!-- Update to the latest version if needed -->
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                </configuration>
+            </plugin>
+            <!-- Other plugins -->
+        </plugins>
+    </build>
   <name>CreatoXdoc</name>
 </project>
